Fix spacing in Navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,3 +50,14 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.search-bar {
+  display: flex;
+  gap: 10px;
+  height: 40px;
+  margin-right: 15px;
+}
+
+.text-nowrap {
+  white-space: nowrap;
+}
